# full-service

./: .gitmodules  Cargo.toml
full-service/core/: Cargo.toml
full-service/core/src/: error.rs  lib.rs  transaction_memo.rs  unsigned_tx.rs
full-service/core/src/models/: mod.rs  tx_proposal.rs  tx_signing_data.rs
full-service/service/: Cargo.toml
full-service/service/src/: config.rs  error.rs  lib.rs
full-service/service/src/db/: transaction_log.rs  txo.rs
full-service/service/src/json_rpc/v1/api/: wallet.rs
full-service/service/src/json_rpc/v1/models/: tx_proposal.rs
full-service/service/src/json_rpc/v2/api/: wallet.rs
full-service/service/src/json_rpc/v2/e2e_tests/transaction/: transaction_other.rs  transaction_txo.rs
full-service/service/src/json_rpc/v2/e2e_tests/transaction/build_submit/: build_and_submit.rs  build_then_submit.rs  large_transaction.rs  multiple_outlay.rs
full-service/service/src/json_rpc/v2/models/: tx_proposal.rs
full-service/service/src/service/: converters.rs  gift_code.rs  mod.rs  receipt.rs  transaction.rs  transaction_builder.rs  txo.rs
full-service/service/src/service/models/: mod.rs  wrapped_tx_proposal.rs
full-service/src/service/: transaction_builder.rs
validator/connection/: Cargo.toml
validator/connection/src/: lib.rs
wasm-sdk/: Cargo.toml
wasm-sdk/src/: lib.rs
wasm-sdk/src/data_types/: mod.rs  tx_proposal.rs  tx_proposal_json.rs
wasm-sdk/src/util/b58/: mod.rs
wasm-util/: Cargo.toml
wasm-util/src/: lib.rs
wasm-util/src/data_types/: amount_json.rs  mod.rs  tx_proposal_json.rs  tx_signing_data_json.rs
