[package]
name = "mc-wasm-sdk"
version = "2.0.0"
edition = "2021"

[lib]
name = "mc_wasm_sdk"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-api = { path = "../mobilecoin/api" }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../mobilecoin/transaction/std" }
mc-crypto-ring-signature-signer = { path = "../mobilecoin/crypto/ring-signature/signer"}
mc-util-serial = { path = "../mobilecoin/util/serial", default-features = false }
mc-util-from-random = { path = "../mobilecoin/util/from-random", default-features = false }

# These are required since they enable feature flags needed for wasm builds
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
hex = {version = "0.4", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.61"
protobuf = "2.12"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
